--- a/example/now.json
+++ b/example/now.json
@@ -9,4 +9,18 @@
           "bottender.config.js",
           "index.js"
         ],
-     
+        "bundle": true
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/.*",
+      "dest": "/server.js"
+    }
+  ],
+  "env": {
+    "LINE_ACCESS_TOKEN": "@line-flex-ui-access-token",
+    "LINE_CHANNEL_SECRET": "@line-flex-ui-channel-secret"
+  }
+}
