--- a/package.json
+++ b/package.json
@@ -15,4 +15,17 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.9
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1"
+  },
+  "keywords": [
+    "line",
+    "bottender",
+    "component"
+  ],
+  "files": [
+    "src",
+    "components.js",
+    "showcase.js"
+  ]
+}
